# Malody_Catch_Editor

./: .gitignore  .mailmap  CMakeLists.txt  TESTING.md  readme.md
.github/workflows/: ci.yml
android/: AndroidManifest.xml
docs/: NOTE_CHAIN_ASSIST_PLUGIN_DESIGN.md  about.md  commit_ready_notes_2026-05-05.md  core_split_mobile_ffi_migration_plan.md  desktop_todo_implementation_2026-05-05.md  followup_ui_responsiveness_fix_2026-05-05.md  help.md  history.md  note_chain_assist_modularization_prep.md  post_commit_verification_2026-05-05.md  version.md
plugins/: README.md  sync_plugins_to_builds.ps1
plugins/builtin/note_chain_assist/: README.md  note_chain_assist.plugin.json  note_chain_assist.py
plugins/builtin/note_chain_assist/modular/actions/: batch_commit.py  tool_actions.py
plugins/builtin/note_chain_assist/modular/core/: curve_model.py  i18n.py  sidecar_v3.py  state.py  time_math.py
plugins/builtin/note_chain_assist/modular/runtime/: plugin_loop.py  protocol_io.py  workspace.py
plugins/builtin/note_chain_assist/modular/ui/: input_handler.py  overlay.py
plugins/builtin/note_color_formatter/: README.md  note_color_formatter.plugin.json  note_color_formatter.py
plugins/samples/: README.md
plugins/samples/beat_normalizer/: README.sample.md  beat_normalizer.plugin.json  malody_catch_colour_changer.py
plugins/samples/note_chain_interaction_demo/: README.sample.md  note_chain_interaction_demo.plugin.json  note_chain_interaction_demo.py
resources/default_skin/Arona Catch by Myhome/: preview.json
resources/qml/mobile/: MobilePrimaryBar.qml
resources/translations/: catch_editor_en_US.ts  catch_editor_ja_JP.ts  catch_editor_zh_CN.ts
src/: main.cpp
src/app/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h  MainWindowDialogs.cpp  MainWindowMobile.cpp  MainWindowPrivate.h  MainWindowSkinAudio.cpp  MobileResourcePaths.cpp
src/app/mobile/: MainWindowMobile.cpp  MobileResourcePaths.cpp  MobileResourcePaths.h
src/audio/: AudioPlayer.cpp  AudioPlayer.h  NoteSoundPlayer.cpp  NoteSoundPlayer.h
src/controller/: ChartController.cpp  ChartController.h  PlaybackController.cpp  PlaybackController.h  SelectionController.cpp  SelectionController.h  UndoRedoManager.h
src/file/: ChartIO.cpp  ChartIO.h  PluginLoader.cpp  PluginLoader.h  ProjectIO.cpp  ProjectIO.h  SkinIO.cpp  SkinIO.h
src/model/: BpmEntry.cpp  BpmEntry.h  Chart.cpp  Chart.h  MetaData.cpp  MetaData.h  Note.cpp  Note.h  Skin.cpp  Skin.h
src/plugin/: ADVANCED_COLOR_EDITOR_PLUGIN.md  BuiltinBeatNormalizerPlugin.cpp  BuiltinBeatNormalizerPlugin.h  ExternalProcessPlugin.cpp  ExternalProcessPlugin.h  PLUGIN_TEMPLATE.md  PROCESS_PLUGIN_PROTOCOL.md  PluginInterface.h  PluginManager.cpp  PluginManager.h  README.md
src/plugin/docs/: ADVANCED_COLOR_EDITOR_PLUGIN.md  CANVAS_INTERACTION_PROTOCOL.md  PROCESS_PLUGIN_MINIMAL_EXAMPLE.md  PROCESS_PLUGIN_PROTOCOL.md  README.md
src/plugin/samples/: README.md
src/plugin/samples/process/node/: example.plugin.json  node_plugin.js
src/plugin/samples/process/python/: example.plugin.json  python_plugin.py
src/plugin/samples/process/python/beat_normalizer/: README.md  beat_normalizer.plugin.json  malody_catch_colour_changer.py
src/render/: BackgroundRenderer.cpp  BackgroundRenderer.h  BeatDivisionColor.cpp  BeatDivisionColor.h  GridRenderer.cpp  GridRenderer.h  HyperfruitDetector.cpp  HyperfruitDetector.h  NoteRenderer.cpp  NoteRenderer.h
src/ui/: BPMTimePanel.cpp  BPMTimePanel.h  DensityCurve.cpp  DensityCurve.h  LeftPanel.cpp  LeftPanel.h  MetaEditPanel.cpp  MetaEditPanel.h  NoteEditPanel.cpp  NoteEditPanel.h  NoteItem.cpp  NoteItem.h  SpeedPopup.cpp  SpeedPopup.h  TimelineWidget.cpp  TimelineWidget.h
src/ui/CustomWidgets/: ChartCanvas.cpp  ChartCanvas.h  RealtimePreviewWidget.cpp  RealtimePreviewWidget.h  RightPanel.cpp  RightPanel.h
src/ui/CustomWidgets/ChartCanvas/: ChartCanvas.cpp  ChartCanvas.h  ChartCanvasInteraction.cpp  ChartCanvasMouse.cpp  ChartCanvasPaste.cpp  ChartCanvasPlayback.cpp  ChartCanvasRender.cpp
src/ui/dialogs/: LogSettingsDialog.cpp  LogSettingsDialog.h  PluginManagerDialog.cpp  PluginManagerDialog.h
src/utils/: DiagnosticCollector.cpp  DiagnosticCollector.h  FileUtils.cpp  FileUtils.h  Logger.cpp  Logger.h  MathUtils.cpp  MathUtils.h  PerformanceTimer.cpp  PerformanceTimer.h  PlaybackStutterProbe.cpp  PlaybackStutterProbe.h  Settings.cpp  Settings.h  Translator.cpp  Translator.h
tests/: minimal_tests.cpp
tools/perf/: playback_probe_console.ps1  playback_probe_report.ps1
